# asra

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  railway.toml
apps/api/: README.md  pyproject.toml
apps/api/scripts/: benchmark_end_to_end.py  benchmark_ingest_downloads.py
apps/api/src/findings_api/: __init__.py  background.py  config.py  db.py  licensing.py  main.py  models.py  ops_dashboard.py  progress_ticker.py  sampling.py  schemas.py  session_recovery.py  visitor_ids.py  visitor_metrics.py
apps/api/src/findings_api/analysis/: __init__.py  ai_summary.py  ai_usage.py  charts.py  chat.py  chat_sql.py  cross_measure.py  descriptive.py  field_relevance.py  join.py  labels.py  measure_semantics.py  methods.py  mode.py  narrative.py  profile.py  ranker.py  runner.py  selector.py  summary_context.py  types.py
apps/api/src/findings_api/catalog/: __init__.py  cli.py  column_quality.py  distributions.py  probe.py  probe_batch.py  quality.py  (+15 more)
apps/api/tests/: conftest.py  test_ai_budget.py  test_ai_summary.py  test_analysis.py  test_analysis_mode.py  test_catalog_probe.py  test_charts.py  test_chat_prompt.py  test_chat_query.py  test_column_quality.py  test_cross_measure.py  test_descriptive.py  test_distributions.py  test_download_policy.py  test_field_relevance.py  test_fred_probe.py  test_guided.py  test_guided_api.py  test_health.py  test_join.py  test_licensing.py  test_load_json.py  test_measure_join_labels.py  test_measure_semantics.py  test_methods.py  test_metrics_api.py  test_ml_suite.py  test_narrative.py  test_nyc_open_data.py  test_ops_dashboard.py  test_parallel_download.py  test_progress_ticker.py  test_ranker_joined.py  test_search_db.py  test_selector_geo_dedupe.py  test_session_recovery.py  test_sessions.py  test_summary_context.py  test_sync_limits.py  test_topic_classifier.py  (+6 more)
apps/api/tests/fixtures/: nyc_wholesale_markets_sample.json
(+114 files in other folders)
