[project]
name = "findings-api"
version = "0.1.0"
description = "Findings.ai API and analysis worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "anthropic>=0.39.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
findings-sync = "findings_api.catalog.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findings_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/findings_api/guided/paths.yaml" = "findings_api/guided/paths.yaml"
"src/findings_api/catalog/topics.yaml" = "findings_api/catalog/topics.yaml"

[tool.ruff]
line-length = 100
target-version = "py312"
